--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,8 @@
 <h1>{{ title }}</h1>
 <ul>
+    <p *ngIf="todos.length === 0">
+        <small>Você ainda não tem nenhuma Tarefa</small>
+    </p>
     <li *ngFor="let todo of todos">
         {{todo.id}}. {{ todo.title }} -
         <button *ngIf="!todo.done" (click)="markAsDone(todo)"> CONCLUIR</button> |
@@ -21,6 +24,6 @@
             *ngIf="form.controls.title.invalid && !form.controls.title.pristine">
             Este Campo Deve Conter Entre 3 e 60 Caracteres
         </small>
-        <button [disabled]="form.invalid">Salvar</button>
+        <button [disabled]="form.invalid" (click)="add()">Salvar</button>
     </fieldset>
 </form>
